@@ -1,3 +1,7 @@
+2011-10-13	Ralf Corsépius <ralf.corsepius@rtems.org>
+
+	* shared/comm/uart.c: Remove unused var "tmp".
+
 2011-08-04	Till Straumann <strauman@slac.stanford.edu>
 
 	* shared/irq/irq_asm.S: BUGFIX (introduced by SMP changes
